force-app/main/default/objects/GRM_UserStoryDeploymentDetail__c.object
<CustomObject>
    <fields>
        <fullName>DataToDel__c</fullName>
        <label>DataToDel</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DataToRollBack__c</fullName>
        <label>DataToRollBack</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Destination_Org__c</fullName>
        <label>Destination Org</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GRM_DeploymentDetail__c</fullName>
        <label>GRM_DeploymentDetail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_DeploymentDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RM_DeploymentDetail</label>
        <referenceTo>RM_DeploymentDetail__c</referenceTo>
        <relationshipLabel>GRM_UserStoryDeploymentDetails</relationshipLabel>
        <relationshipName>GRM_UserStoryDeploymentDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Org__c</fullName>
        <label>Source Org</label>
        <type>TextArea</type>
    </fields>
    <label>GRM_UserStoryDeploymentDetail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_List_View</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My List View</label>
    </listViews>
    <nameField>
        <label>GRM_UserStoryDeploymentDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GRM_UserStoryDeploymentDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>